Correct spacing of popups

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -12,7 +12,7 @@
 
 .popup-close {
     position: absolute;
-    right: 1.75rem;
-    top: 1.75rem;
+    right: 1rem;
+    top: 1rem;
     cursor: pointer;
 }
