--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -338,7 +338,7 @@
         flex-wrap: wrap;
         max-width: 85%;
         margin: 0 auto;
-        padding-top: 3rem;
+        padding-top: 5rem;
 
         &-copy {
             padding: 0 1rem;
@@ -368,6 +368,7 @@
     &__store {
         width: 50%;
         margin: 0 auto;
+        padding-top: 5rem;
 
         &-copy {
             max-width: 100%;
@@ -385,7 +386,7 @@
         font-size: 1rem;
         max-width: 85%;
         margin: 0 auto;
-        padding-top: 3rem;
+        padding-top: 5rem;
 
         & p {
             margin-top: 1.5rem;
@@ -412,7 +413,7 @@
 
     &__unique {
         width: 68%;
-        padding-top: 5rem;
+        padding-top: 6rem;
         margin: 0 auto;
 
         &-illustration {
